--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         content="Deformable Neural Radiance Fields creates free-viewpoint portraits (nerfies) from casually captured videos.">
   <meta name="keywords" content="Nerfies, D-NeRF, NeRF">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>GA-TEB: Goal-Adaptive Framework for Efficient Navigation Based on Goal Lines</title>
+  <title>Follow Everything: A Leader-Following and Obstacle Avoidance Framework with Goal-Aware Adaptation</title>
 
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-PYVRSFMDRL"></script>
@@ -66,7 +66,7 @@
     <div class="container is-max-desktop">
       <div class="columns is-centered">
         <div class="column has-text-centered">
-          <h1 class="title is-1 publication-title">GA-TEB: Goal-Adaptive Framework for Efficient Navigation Based on Goal Lines</h1>
+          <h1 class="title is-1 publication-title">Follow Everything: A Leader-Following and Obstacle Avoidance Framework with Goal-Aware Adaptation</h1>
           <div class="is-size-5 publication-authors">
             <span class="author-block">
               <a href="https://qianyi-zhang.github.io/">Qianyi Zhang</a><sup>1</sup>,</span>
