--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
       <div class="columns is-centered">
         <div class="column has-text-centered">
           <h1 class="title is-1 publication-title">Follow Everything: A Leader-Following and Obstacle Avoidance Framework with Goal-Aware Adaptation</h1>
-          <div class="is-size-5 publication-authors">
+          <!-- <div class="is-size-5 publication-authors">
             <span class="author-block">
               <a href="https://qianyi-zhang.github.io/">Qianyi Zhang</a><sup>1</sup>,</span>
             <span class="author-block">
@@ -81,7 +81,11 @@
             <span class="author-block">
               <a href="https://aien.nankai.edu.cn/2021/1108/c28086a418805/page.htm">Jingtai Liu</a><sup>1</sup>
             </span>
+          </div> -->
+          <div class="is-size-5 publication-authors">
+            <span class="author-block"> Anonymous</span>
           </div>
+          
 
           <div class="is-size-5 publication-authors">
             <span class="author-block"><sup>1</sup>Nankai University,</span>
