--- a/index.html
+++ b/index.html
@@ -120,37 +120,37 @@
       <div id="results-carousel" class="carousel results-carousel">
         <div class="item item-steve">
           <video poster="" id="steve" autoplay controls muted loop playsinline height="100%">
-            <source src="./static/videos/sim_obs.mp4"
+            <source src="./static/videos/exp1.mp4"
                     type="video/mp4">
           </video>
         </div>
         <div class="item item-chair-tp">
           <video poster="" id="chair-tp" autoplay controls muted loop playsinline height="100%">
-            <source src="./static/videos/sim_pede.mp4"
+            <source src="./static/videos/exp2.mp4"
                     type="video/mp4">
           </video>
         </div>
         <div class="item item-shiba">
           <video poster="" id="shiba" autoplay controls muted loop playsinline height="100%">
-            <source src="./static/videos/real_obs1.mp4"
+            <source src="./static/videos/exp3.mp4"
                     type="video/mp4">
           </video>
         </div>
         <div class="item item-steve">
           <video poster="" id="steve" autoplay controls muted loop playsinline height="100%">
-            <source src="./static/videos/sim_obs.mp4"
+            <source src="./static/videos/exp1.mp4"
                     type="video/mp4">
           </video>
         </div>
         <div class="item item-chair-tp">
           <video poster="" id="chair-tp" autoplay controls muted loop playsinline height="100%">
-            <source src="./static/videos/sim_pede.mp4"
+            <source src="./static/videos/exp2.mp4"
                     type="video/mp4">
           </video>
         </div>
         <div class="item item-shiba">
           <video poster="" id="shiba" autoplay controls muted loop playsinline height="100%">
-            <source src="./static/videos/real_obs1.mp4"
+            <source src="./static/videos/exp3.mp4"
                     type="video/mp4">
           </video>
         </div>
@@ -159,37 +159,37 @@
       <div id="results-carousel2" class="carousel results-carousel">
         <div class="item item-fullbody">
           <video poster="" id="fullbody" autoplay controls muted loop playsinline height="100%">
-            <source src="./static/videos/real_obs2.mp4"
+            <source src="./static/videos/exp4.mp4"
                     type="video/mp4">
           </video>
         </div>
         <div class="item item-blueshirt">
           <video poster="" id="blueshirt" autoplay controls muted loop playsinline height="100%">
-            <source src="./static/videos/real_pede1.mp4"
+            <source src="./static/videos/exp5.mp4"
                     type="video/mp4">
           </video>
         </div>
         <div class="item item-mask">
           <video poster="" id="mask" autoplay controls muted loop playsinline height="100%">
-            <source src="./static/videos/real_pede2.mp4"
+            <source src="./static/videos/dynamic.mp4"
                     type="video/mp4">
           </video>
         </div>
         <div class="item item-fullbody">
           <video poster="" id="fullbody" autoplay controls muted loop playsinline height="100%">
-            <source src="./static/videos/real_obs2.mp4"
+            <source src="./static/videos/exp4.mp4"
                     type="video/mp4">
           </video>
         </div>
         <div class="item item-blueshirt">
           <video poster="" id="blueshirt" autoplay controls muted loop playsinline height="100%">
-            <source src="./static/videos/real_pede1.mp4"
+            <source src="./static/videos/exp5.mp4"
                     type="video/mp4">
           </video>
         </div>
         <div class="item item-mask">
           <video poster="" id="mask" autoplay controls muted loop playsinline height="100%">
-            <source src="./static/videos/real_pede2.mp4"
+            <source src="./static/videos/dynamic.mp4"
                     type="video/mp4">
           </video>
         </div>
