--- a/index.html
+++ b/index.html
@@ -117,86 +117,68 @@
 <section class="hero is-light is-small">
   <div class="hero-body">
     <div class="container">
-      <div id="results-carousel" class="carousel results-carousel">
-        <div class="item item-steve">
-          <video poster="" id="steve" autoplay controls muted loop playsinline height="100%">
-            <source src="./static/videos/exp1.mp4"
-                    type="video/mp4">
+      <div class="video-grid">
+        <div class="video-item">
+          <video poster="" id="steve" autoplay controls muted loop playsinline>
+            <source src="./static/videos/exp1.mov" type="video/mp4">
           </video>
         </div>
-        <div class="item item-chair-tp">
-          <video poster="" id="chair-tp" autoplay controls muted loop playsinline height="100%">
-            <source src="./static/videos/exp2.mp4"
-                    type="video/mp4">
+        <div class="video-item">
+          <video poster="" id="chair-tp" autoplay controls muted loop playsinline>
+            <source src="./static/videos/exp2.mp4" type="video/mp4">
           </video>
         </div>
-        <div class="item item-shiba">
-          <video poster="" id="shiba" autoplay controls muted loop playsinline height="100%">
-            <source src="./static/videos/exp3.mp4"
-                    type="video/mp4">
+        <div class="video-item">
+          <video poster="" id="shiba" autoplay controls muted loop playsinline>
+            <source src="./static/videos/exp3.mp4" type="video/mp4">
           </video>
         </div>
-        <div class="item item-steve">
-          <video poster="" id="steve" autoplay controls muted loop playsinline height="100%">
-            <source src="./static/videos/exp1.mp4"
-                    type="video/mp4">
+        <div class="video-item">
+          <video poster="" id="fullbody" autoplay controls muted loop playsinline>
+            <source src="./static/videos/exp4.mp4" type="video/mp4">
           </video>
         </div>
-        <div class="item item-chair-tp">
-          <video poster="" id="chair-tp" autoplay controls muted loop playsinline height="100%">
-            <source src="./static/videos/exp2.mp4"
-                    type="video/mp4">
+        <div class="video-item">
+          <video poster="" id="blueshirt" autoplay controls muted loop playsinline>
+            <source src="./static/videos/exp5.mp4" type="video/mp4">
           </video>
         </div>
-        <div class="item item-shiba">
-          <video poster="" id="shiba" autoplay controls muted loop playsinline height="100%">
-            <source src="./static/videos/exp3.mp4"
-                    type="video/mp4">
+        <div class="video-item">
+          <video poster="" id="mask" autoplay controls muted loop playsinline>
+            <source src="./static/videos/dynamic.mp4" type="video/mp4">
           </video>
         </div>
-      </div>
-
-      <div id="results-carousel2" class="carousel results-carousel">
-        <div class="item item-fullbody">
-          <video poster="" id="fullbody" autoplay controls muted loop playsinline height="100%">
-            <source src="./static/videos/exp4.mp4"
-                    type="video/mp4">
+        <div class="video-item">
+          <video poster="" id="fullbody2" autoplay controls muted loop playsinline>
+            <source src="./static/videos/forest1.mp4" type="video/mp4">
           </video>
         </div>
-        <div class="item item-blueshirt">
-          <video poster="" id="blueshirt" autoplay controls muted loop playsinline height="100%">
-            <source src="./static/videos/exp5.mp4"
-                    type="video/mp4">
+        <div class="video-item">
+          <video poster="" id="blueshirt2" autoplay controls muted loop playsinline>
+            <source src="./static/videos/forest2.mp4" type="video/mp4">
           </video>
         </div>
-        <div class="item item-mask">
-          <video poster="" id="mask" autoplay controls muted loop playsinline height="100%">
-            <source src="./static/videos/dynamic.mp4"
-                    type="video/mp4">
+        <div class="video-item">
+          <video poster="" id="mask2" autoplay controls muted loop playsinline>
+            <source src="./static/videos/factory.mp4" type="video/mp4">
           </video>
         </div>
-        <div class="item item-fullbody">
-          <video poster="" id="fullbody" autoplay controls muted loop playsinline height="100%">
-            <source src="./static/videos/exp4.mp4"
-                    type="video/mp4">
+        <div class="video-item">
+          <video poster="" id="mask2" autoplay controls muted loop playsinline>
+            <source src="./static/videos/playground1.mp4" type="video/mp4">
           </video>
         </div>
-        <div class="item item-blueshirt">
-          <video poster="" id="blueshirt" autoplay controls muted loop playsinline height="100%">
-            <source src="./static/videos/exp5.mp4"
-                    type="video/mp4">
-          </video>
-        </div>
-        <div class="item item-mask">
-          <video poster="" id="mask" autoplay controls muted loop playsinline height="100%">
-            <source src="./static/videos/dynamic.mp4"
-                    type="video/mp4">
+        <div class="video-item">
+          <video poster="" id="mask2" autoplay controls muted loop playsinline>
+            <source src="./static/videos/playground2.mp4" type="video/mp4">
           </video>
         </div>
       </div>
     </div>
   </div>
 </section>
+
+
 
 
 <section class="section">
