--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
       <div class="video-grid">
         <div class="video-item">
           <video poster="" id="steve" autoplay controls muted loop playsinline>
-            <source src="./static/videos/exp1.mov" type="video/mp4">
+            <source src="./static/videos/exp1.mp4" type="video/mp4">
           </video>
         </div>
         <div class="video-item">
