--- a/index.html
+++ b/index.html
@@ -222,19 +222,29 @@
 <style>
   .video-grid {
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    gap: 20px;
+    grid-template-columns: repeat(3, 1fr);  /* 默认每行3个视频 */
+    gap: 20px;  /* 设置视频项之间的间距 */
   }
+
   .video-item {
-    width: 100%;
-    display: flex;
-    justify-content: center;
+    /* 可自定义视频项的样式 */
   }
-  video {
-    width: 100%;
-    max-height: 300px;
-    border-radius: 10px;
-    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+
+  .video-grid > .video-item:nth-child(4),  /* 第一行结束后（第4个） */
+  .video-grid > .video-item:nth-child(5) {
+    grid-column: span 2; /* 第二行开始时，前两个视频项跨2列 */
+  }
+
+  @media (max-width: 768px) {
+    .video-grid {
+      grid-template-columns: repeat(2, 1fr); /* 屏幕较小时，改为每行2个视频 */
+    }
+  }
+
+  @media (max-width: 480px) {
+    .video-grid {
+      grid-template-columns: 1fr; /* 屏幕更小时，改为每行1个视频 */
+    }
   }
 </style>
 
