--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
           <div class="column has-text-centered">
             <div class="publication-links">
               <!-- PDF Link. -->
-              <span class="link-block">
+              <!-- <span class="link-block">
                 <a href="https://arxiv.org/abs/2409.10009"
                    class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
@@ -82,7 +82,7 @@
                   </span>
                   <span>Paper</span>
                 </a>
-              </span>
+              </span> -->
               <!-- Video Link. -->
               <span class="link-block">
                 <a href="https://www.youtube.com/watch?v=N3d6XKs4Jns"
